--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -10,6 +10,7 @@
 <div>
   <div class='calendar'>
     <% @week_days.each do |day| %>
+      <div class='item'>
         <div class='date'>
           <% day[:month] %>/<% day[:date] %>
         </div>
@@ -20,6 +21,7 @@
           <% end %>
         <% end %>
         </ul>
+      </div>
     <% end %>
   </div>
 </div>
