--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -8,19 +8,16 @@
   <% end %>
 
   <div class='calendar'>
-    <% @week_days.each do |day| %>
-      <div class='item'>
-        <div class='date'>
-          <% day[:month] %>/<% day[:date] %>
-        </div>
-        <ul class='content'>
-        <% if day[:plans].length != 0 %>
-          <% day[:plans].each do |plan| %>
-            <li class='plan-list'>・<%= plan %></li>
-          <% end %>
+  <% @week_days.each do |day| %>
+    <div class='date'>
+      <%= day[:month] %>/<%= day[:date] %>
+    </div>
+    <ul class='content'>
+      <% if day[:plans].length != 0 %>
+        <% day[:plans].each do |plan| %>
+          <li class='plan-list'>・<%= plan %></li>
         <% end %>
-        </ul>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </ul>
+  <% end %>
 </div>
