--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,4 +1,4 @@
-
+<div>
   <%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
     <%= f.label :日付を選択, class: 'lavel' %>
     <%= f.date_field :date, class: 'date-select' %>
@@ -8,7 +8,6 @@
   <% end %>
 
   <div class='calendar'>
-
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
@@ -21,7 +20,7 @@
           <% end %>
 
         <% end %>
-      <% end %>
-    </ul>
-  <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
